--- a/exam3.tex
+++ b/exam3.tex
@@ -86,10 +86,24 @@
       photon energy $E$ and 3-momentum in the $S$ frame.
     \end{enumerate}
 
+
+    \begin{center}
+      \includegraphics[height=16cm, width=17cm]{1A.JPG}
+    \end{center}
+
     \pagebreak
 
+    \begin{center}
+      \includegraphics[height=16cm, width=17cm]{1B.JPG}
+    \end{center}
+    
+    \pagebreak
 
+    \begin{center}
+      \includegraphics[height=16cm, width=17cm]{1C.JPG}
+    \end{center}
 
+    \pagebreak
 
     \item \textbf{Problem 2 [25 points]}
     At our CXFEL tour I went over how Inverse Compton scattering can be used to produce x-rays, as
@@ -319,13 +333,13 @@
     \end{enumerate}
 
     \begin{center}
-      \includegraphics[height=15cm, width=16cm]{3B(A).JPG}
+      \includegraphics[height=16cm, width=17cm]{3B(A).JPG}
     \end{center}
 
     \pagebreak
 
     \begin{center}
-      \includegraphics[height=15cm, width=16cm]{3B(B).JPG}
+      \includegraphics[height=16cm, width=17cm]{3B(B).JPG}
     \end{center}
     
     \pagebreak
