--- a/exam3.tex
+++ b/exam3.tex
@@ -99,9 +99,11 @@
     
     \pagebreak
 
-    \begin{center}
+    \begin{center} 
       \includegraphics[height=16cm, width=17cm]{1C.JPG}
     \end{center}
+
+    \textbf{Please note that I meant to use $\hbar$ instead of $h$.}
 
     \pagebreak
 
@@ -141,8 +143,6 @@
     Now you know how ASU Compact X-ray Light Source works!
     
     \pagebreak
-
-
 
 
     \item \textbf{Problem 3 [25 points]}
@@ -366,13 +366,27 @@
       $r, \theta, \phi$ and $\hat{r}, \hat{\theta}, \hat{\phi}$. 
       \emph{Hint: save time by making use of equations developed in Griffiths.}
 
-
       \item Determine the power radiated into a distant detector with a tiny solid angle $\Delta \Omega ≪ \pi$. 
       Write it down in terms of $R$, $\epsilon_r$, the angles $\theta$ and $\phi$, and the incident intensity 
       $I_0=\dfrac{1}{2 \mu_0 c}|E_0|^2$. \emph{Hint: save time by making use of equations developed in Griffiths.}
     \end{enumerate}
+
+    \begin{center}
+      \includegraphics[height=16cm, width=17cm]{4A.JPG}
+    \end{center}
+
+    \pagebreak
+
+    \begin{center}
+      \includegraphics[height=16cm, width=17cm]{4B.JPG}
+    \end{center}
     
     \pagebreak
+
+    \begin{center} 
+      \includegraphics[height=16cm, width=17cm]{4C.JPG}
+    \end{center}
+    
 
   \end{enumerate}
 
