--- a/exam3.tex
+++ b/exam3.tex
@@ -141,7 +141,11 @@
 
     \end{enumerate}
     Now you know how ASU Compact X-ray Light Source works!
-    
+
+    \begin{center}
+      \includegraphics[height=16cm, width=17cm]{2.JPG}
+    \end{center}
+
     \pagebreak
 
 
